fixed some issues with processing and storage and kafkaconnection with storage and receiver
